--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "event-stream": "^3.1.7",
     "smart-stream": "^0.2.0",
+    "stream-buffer": "^1.0.0",
     "stream-parser": "^0.3.0"
   }
 }
